ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 1.5.2
    • Affects Version/s: 1.5.1
    • Component/s: Sharding
    • None
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      on ec2, 4 virtual machine acting as both mongod shards and mongos, a fifth acting as mongos and config server.

      The following message is spewed every few minutes, obviously the chunks are not evenly balanced.

      2010-05-11_21:02:13.15486 Tue May 11 21:02:13 balancer: move a chunk from [shard0] to [shard1] { id: "logs.logs-timestamp"2010-03-16T05:46:33.802858"", lastmod: Timestamp 1273611724000|3, ns: "logs.logs", min:

      { timestamp: "2010-03-16T05:46:33.802858" }

      , max:

      { timestamp: "2010-04-01T00:06:46.635643" }

      , shard: "shard0" }
      2010-05-11_21:02:13.15491 Tue May 11 21:02:13 Assertion failure c.getMin().woCompare( chunkToMove["min"].Obj() ) == 0 s/balance.cpp 160
      2010-05-11_21:02:13.15492 0x4dc67f 0x4e4543 0x5a545e 0x5a62ff 0x5a6d0f 0x4d2750 0x5aca1e 0x7fcd8cef3a04 0x7fcd8c4b280d
      2010-05-11_21:02:13.15493 /opt/mongodb/bin/mongos(_ZN5mongo12sayDbContextEPKc+0x14f) [0x4dc67f]
      2010-05-11_21:02:13.15494 /opt/mongodb/bin/mongos(_ZN5mongo8assertedEPKcS1_j+0xd3) [0x4e4543]
      2010-05-11_21:02:13.15495 /opt/mongodb/bin/mongos(_ZN5mongo8Balancer7balanceERNS_12DBClientBaseERKSsRKNS_7BSONObjE+0xe0e) [0x5a545e]
      2010-05-11_21:02:13.15496 /opt/mongodb/bin/mongos(_ZN5mongo8Balancer7balanceERNS_12DBClientBaseE+0x4ef) [0x5a62ff]
      2010-05-11_21:02:13.15497 /opt/mongodb/bin/mongos(_ZN5mongo8Balancer3runEv+0x2df) [0x5a6d0f]
      2010-05-11_21:02:13.15498 /opt/mongodb/bin/mongos(_ZN5mongo13BackgroundJob3thrEv+0x40) [0x4d2750]
      2010-05-11_21:02:13.15499 /opt/mongodb/bin/mongos(thread_proxy+0x5e) [0x5aca1e]
      2010-05-11_21:02:13.15502 /lib/libpthread.so.0 [0x7fcd8cef3a04]
      2010-05-11_21:02:13.15503 /lib/libc.so.6(clone+0x6d) [0x7fcd8c4b280d]
      2010-05-11_21:02:13.15504 Tue May 11 21:02:13 ~ScopedDBConnection: _conn != null
      2010-05-11_21:02:13.15505 Tue May 11 21:02:13 caught exception while doing balance: assertion s/balance.cpp:160

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Mathieu Poumeyrol
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: