some debugging for SERVER-1109